  - Use core Message::Passing::Role::HasHostnameAndPort

0.002
  - Fix SYNOPSIS in documentation.
  - Add timeouts to tests to avoid hangs when they fail.
  - Fix for latest version of Message::Passing.
  - Emit warnings if output is a perl ref (i.e. hasn't
    been correctly serialized/encoded)

0.001
  - Initial barely working version
